# WorkflowExperiments

./: .gitignore  Makefile  README.md  build_and_install.sh
.github/workflows/: c-cpp.yml  get_qo_onboard_files.yml
documentation/source/examples/: CMakeLists.txt  SimpleUseCase.cpp  apt-install.txt  config-sample-01.yml  config-sample-02.yml  config-sample-03.yml  config-specification.txt  reseed-specification.txt  simple_use_case_configfile_c.c  simple_use_case_setoptions_c.c  yum-install.txt
qoo_latest/include/qo_onboard/: qo_onboard_c.h
sample_code/: .gitignore  CMakeLists.txt  Config.md  Makefile  README.md  qo_onboard_sample_code_A_using_config_file.c  qo_onboard_sample_code_B_using_setopt_api.c  qo_onboard_sample_code_C_minimal_get32bytes.c  qo_onboard_sample_code_D_minimal_coinflip.c  qo_onboard_sample_code_seed.h  qo_onboard_sample_config.yml  qoo_samples.sh  qoo_samples_build.sh  qoo_samples_install.sh  qoo_samples_run.sh
src/simple_cli_c/: CMakeLists.txt  config_for_SimpleCLI_tests.yml  qo_hexdump.c  qo_hexdump.h  qo_onboard_sample_code_seed.h  qo_onboard_simple_cli_c.c  qo_onboard_simple_cli_using_setoptions_c.c
